--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,25 @@
 .flex-container{
     display: flex;
 }
+
+body{
+    font-family: 'Open Sans', sans-serif;
+}
+
+nav{
+    height: 80px;
+    background-color: paleturquoise;
+}
+
+section.main-header{
+    height: 70vh;
+    background-color: #b4d0e7;
+    padding-top: 100px;
+}
+
+article.header-container{
+    margin: 0 auto;
+    width: 65%;
+    height: 67vh;
+    background-color: rgb(61, 61, 233);
+}
