--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
 }
 
 .medium-width{
-    width: 60%;
+    width: 55%;
 }
 
 ul{
@@ -66,7 +66,7 @@ section.main-header{
 
 article.header-container{
     margin: 0 auto;
-    width: 70%;
+    width: 80%;
     height: 67vh;
 }
 
@@ -86,7 +86,7 @@ article.header-container{
 
 .main-header div.description{
     flex-basis: 35%;
-    padding: 2rem;
+    padding: 2rem 2.3rem;
     font-size: 1rem;
     position: relative;
 }
@@ -114,12 +114,20 @@ div.jumbotron img{
 section.business-plans{
     height: calc(150vh - 150px);
     margin: 150px auto 0;
-    background-color: rgb(230, 50, 110);
 }
 
 article.title-check{
-    height: 17%;
-    background-color: rgb(177, 226, 104);
+    height: 12%;
+}
+
+.title-check h2{
+    font-size: 2rem;
+    margin-bottom: 2.5rem;
+}
+
+.title-check div{
+    display: inline-block;
+    padding-right: 2.5rem;
 }
 
 article.plan-cards{
@@ -133,8 +141,20 @@ div.card-plan{
     border: 2px solid black;
 }
 
+.card-plan div.plan-type{
+    width: 100%;
+    height: 6%;
+    text-align: center;
+    line-height: 2.7;
+    background-color: white;
+}
+
+.card-plan div.plan-info{
+    padding: 1.5rem 1.5rem;
+}
+
 article.contact-plan{
-    height: 23%;
+    height: 28%;
     margin-top: 2rem;
     background-color: rgb(235, 175, 64);
 }
