--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ div.card-plan{
     padding: 1.5rem 1.5rem;
 }
 
-div.plan-info>div{
+.margin-card{
     margin-bottom: 2rem;
 }
 
@@ -177,16 +177,22 @@ div.plan-info ul li{
     font-size: 0.9rem;
 }
 
+div.plan-info li i{
+    padding-top: 4px;
+    padding-right: 0.3rem;
+}
+
 div.plan-info .trial-button{
-    padding: 0.8rem 2rem;
+    padding: 0.8rem 2.7rem;
     font-size: 0.9rem;
-    margin-bottom: 1rem;
+    margin: 0 auto 1rem;
+    display: block;
 }
 
 div.small-divider{
     width: 30%;
-    border: 0.1em solid lightgray;
-    margin-bottom: 0.5rem;
+    border: 1px solid lightgray;
+    margin: 1rem 0;
 }
 
 div.plan-info .highlights{
