--- a/css/style.css
+++ b/css/style.css
@@ -233,18 +233,33 @@ article.contact-plan{
 section.partner-contact{
     height: 50vh;
     margin: 150px auto 0;
-    background-color: palevioletred;
 }
 
 section.partner-contact .partner-img{
     flex-basis: 60%;
-    border: 2px solid black;
-    background-color: teal;
+}
+
+.partner-img img{
+    height: 100%;
+    display: block;
+    margin: 0 auto;
 }
 
 section.partner-contact .partner-text{
     flex-basis: 40%;
-    border: 2px solid black;
+    padding: 2rem;
+}
+
+.partner-text h3{
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+}
+
+.partner-text button{
+    padding: 0.6rem 1rem;
+    font-size: 1rem;
+    background-color: white;
+    border: 1px solid black;
 }
 
 section.dropbox-operations{
