--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,7 @@ section.partnership>div{
 div.logos-part .box-logo{
     width: calc(100vw / 6);
     height: calc(100vw / 6);
+    border: 1px solid black;
 }
 
 .partnership div.logo-info{
