--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,6 @@ section.discover h2{
 }
 
 section.partnership{
-    height: 60vh;
     background-color: rgb(167, 164, 164);
     margin-top: 150px;
 }
@@ -325,9 +324,10 @@ section.partnership>div{
 }
 
 div.logos-part .box-logo{
-    width: calc(100vw / 6);
-    height: calc(100vw / 6);
+    width: 50%;
+    height: 50%;
     border: 1px solid black;
+    background-color: magenta;
 }
 
 .partnership div.logo-info{
