--- a/css/style.css
+++ b/css/style.css
@@ -459,21 +459,32 @@ section.questions article{
 }
 
 section.tools{
-    height: 40vh;
+    height: 50vh;
     background-color: black;
     color: white;
 }
 
-.footer-container{
+article.footer-container{
     height: 80%;
     margin: 0 auto;
 }
 
 .footer-container div.tool-list{
+    margin-top: 7rem;
     flex-basis: calc(100% / 5);
     padding-right: 1.5rem;
-    background-color: thistle;
-    border: 1px solid black;
+    padding-left: 1rem;
+}
+
+.tool-list ul li{
+    margin-bottom: 0.5rem;
+    font-size: 0.9rem;
+}
+
+p.title-list{
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
 }
 
 .language{
@@ -485,5 +496,9 @@ section.tools{
 .language .row{
     width: 150px;
     border: 1px solid white;
-    margin-bottom: 15px;
+    margin-bottom: 2rem;
+}
+
+.language .lang-ita{
+    color: #9a9999;
 }
