--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,21 @@ div.layover{
     display: none;
 }
 
+.layover div.feature{
+    width: 40%;
+    color: rgb(170, 165, 165);
+    padding: 1.5rem;
+    text-shadow: 2px 2px #053358;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
-nav li:hover div.layover{
+li:hover div.layover{
     display: block;
     background-color: rgba(0, 0, 0, 0.5);
 }
