--- a/css/style.css
+++ b/css/style.css
@@ -74,11 +74,12 @@ div.layover{
 }
 
 .layover div.feature{
-    width: 40%;
-    color: rgb(170, 165, 165);
+    width: 60%;
+    color: #91c0e7;
     padding: 1.5rem;
     text-shadow: 2px 2px #053358;
-    font-weight: bold;
+    font-size: 2.5rem;
+    font-family: 'Times New Roman', Times, serif;
     text-align: center;
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.7);
