--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ li:hover div.layover{
 }
 
 
-nav li .drop-menu{
+.left-nav li .drop-menu{
     background-color: #f2eee8;
     z-index: 2;
     top: 100%;
@@ -104,7 +104,19 @@ nav li .drop-menu{
     display: none;
 }
 
-nav li .short-menu{
+.right-nav li .drop-menu{
+    background-color: #f2eee8;
+    z-index: 2;
+    height: 100px;
+    top: 100%;
+    right: 0;
+    width: 350px;
+    height: 100px;
+    display: none;
+}
+
+li div#function-drop,
+li div#solution-drop{
     width: 250px;
 }
 
