--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ nav li{
     height: 80px;
 }
 
-nav ul li:hover{
+nav ul .gray-hov:hover{
     background-color: #f2eee8;
 }
 
@@ -138,6 +138,10 @@ div.drop-menu .right-menu{
     border: none;
 }
 
+.blue-button:hover{
+    background-color: #297afe;
+}
+
 nav a{
     font-size: 1.05rem;
     padding: 0.5rem 1rem;
@@ -162,7 +166,6 @@ article.header-container{
 }
 
 .header-container h1{
-    height: 20%;
     font-size: 3.3rem;
     font-weight: 800;
     width: 80%;
@@ -171,7 +174,6 @@ article.header-container{
 }
 
 .header-container>div{
-    height: 80%;
     padding-left: 3rem;
 }
 
@@ -215,10 +217,6 @@ section.business-plans{
     margin: 150px auto 0;
 }
 
-article.title-check{
-    height: 12%;
-}
-
 .title-check div{
     display: inline-block;
     padding-right: 2.5rem;
@@ -226,7 +224,6 @@ article.title-check{
 }
 
 article.plan-cards{
-    height: 60%;
     justify-content: space-between;
 }
 
@@ -300,7 +297,6 @@ div.plan-info .highlights{
 }
 
 article.contact-plan{
-    height: 28%;
     margin-top: 2rem;
     border: 2px solid #d0d0d3;
 }
@@ -345,22 +341,20 @@ section.partner-contact .partner-text{
     color: black;
 }
 
+.partner-text a:hover{
+    background-color: #f0eeee;
+}
+
 section.dropbox-operations{
     margin: 150px auto 0;
 }
 
-.dropbox-operations>div{
-    height: 10%;
-}
-
 article.operations-container{
-    height: 90%;
     flex-wrap: wrap;
 }
 
 .operations-container .op-card{
     flex-basis: calc((100% / 3) - 2.4rem);
-    height: calc((100% / 2) - 1.6rem);
     margin: 0 1.2rem 0.8rem 1.2rem;
     padding: 0 1rem;
 }
@@ -368,10 +362,6 @@ article.operations-container{
 .op-card p{
     font-size: 0.9rem;
     margin-top: 0.5rem;
-}
-
-.op-card div.image-card{
-    height: 57%;
 }
 
 div.image-card img{
@@ -493,7 +483,6 @@ section.free-trial{
 }
 
 section.free-trial article{
-    height: 100%;
     margin: 0 auto;
     justify-content: space-between;
     align-items: center;
@@ -519,8 +508,11 @@ div.button-part a{
     border: none;
 }
 
+div.button-part a:hover{
+    background-color: #f0eeee;
+}
+
 section.questions article{
-    height: 70%;
     margin: 100px auto;
 }
 
@@ -547,7 +539,6 @@ section.tools{
 }
 
 article.footer-container{
-    height: 80%;
     margin: 0 auto;
 }
 
@@ -570,7 +561,6 @@ p.title-list{
 }
 
 .language{
-    height: 20%;
     margin: 0 auto;
     padding: 2rem 0;
 }
