--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,9 @@ nav ul .gray-hov:hover{
 }
 
 .layover .feature{
-    width: 75%;
+    width: 90%;
     color: #b5cde0;
-    padding: 1.5rem 3rem;
+    padding: 1.2rem 3rem;
     text-shadow: 2px 2px #053358;
     font-size: 1.8rem;
     text-align: center;
@@ -100,7 +100,7 @@ nav ul .gray-hov:hover{
     top: 100%;
     left: 0;
     width: 450px;
-    height: 380px;
+    height: 390px;
     display: none;
 }
 
@@ -122,7 +122,7 @@ nav ul .gray-hov:hover{
 
 li div#function-drop,
 li div#solution-drop{
-    width: 250px;
+    width: 300px;
 }
 
 nav .nav-item:hover .drop-menu{
@@ -137,7 +137,7 @@ nav .nav-item:hover .drop-menu{
 
 .drop-menu ul li{
     font-size: 0.8rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.8rem;
 }
 
 .drop-menu .ul-title{
@@ -154,7 +154,20 @@ nav .nav-item:hover .drop-menu{
     width: 100%;
     height: 100%;
     padding: 1rem;
-    background-color: #61082b;
+}
+
+i.drop-icon{
+    margin-top: 0.2rem;
+    font-size: 1.5rem;
+    height: 60%;
+    color: #005eff;
+    padding: 0.5rem 0.5rem;
+    background-color: white;
+    border-radius: 25%;
+}
+
+.one-menu span{
+    padding-left: 1rem;
 }
 
 .blue-button{
